--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "expo-document-picker": "^13.0.3",
     "expo-image-picker": "~16.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
